cmake_minimum_required(VERSION 3.25.1)
project(TuringLive)
if(NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_C_COMPILER "clang")
endif()
set(CMAKE_GENERATOR "Ninja")
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
add_executable(TuringLive main.c)
target_link_libraries(TuringLive ${SDL2_LIBRARIES})
#include_directories(${SDL2_TTF_INCLUDE_DIRS})
target_link_libraries(TuringLive ${SDL2_TTF_LIBRARIES})